[REFACTOR] 기타 도메인 JPA 의존성 분리