@@ -4,29 +4,35 @@ import com.spoony.spoony_server.application.port.command.zzim.*;
 import com.spoony.spoony_server.application.port.in.zzim.ZzimAddUseCase;
 import com.spoony.spoony_server.application.port.in.zzim.ZzimGetUseCase;
 import com.spoony.spoony_server.application.port.in.zzim.ZzimDeleteUseCase;
+import com.spoony.spoony_server.application.port.out.location.LocationPort;
+import com.spoony.spoony_server.application.port.out.place.PlacePort;
+import com.spoony.spoony_server.application.port.out.post.CategoryPort;
+import com.spoony.spoony_server.application.port.out.post.PostCategoryPort;
+import com.spoony.spoony_server.application.port.out.post.PostPort;
+import com.spoony.spoony_server.application.port.out.user.UserPort;
+import com.spoony.spoony_server.application.port.out.zzim.ZzimPostPort;
+import com.spoony.spoony_server.domain.location.Location;
+import com.spoony.spoony_server.domain.place.Place;
+import com.spoony.spoony_server.domain.post.*;
+import com.spoony.spoony_server.domain.user.User;
+import com.spoony.spoony_server.domain.zzim.ZzimPost;
 import com.spoony.spoony_server.global.exception.BusinessException;
 import com.spoony.spoony_server.global.message.PlaceErrorMessage;
 import com.spoony.spoony_server.global.message.PostErrorMessage;
 import com.spoony.spoony_server.global.message.UserErrorMessage;
 import com.spoony.spoony_server.adapter.out.persistence.location.db.LocationEntity;
-import com.spoony.spoony_server.adapter.out.persistence.location.db.LocationRepository;
 import com.spoony.spoony_server.adapter.out.persistence.place.db.PlaceEntity;
-import com.spoony.spoony_server.adapter.out.persistence.place.db.PlaceRepository;
 import com.spoony.spoony_server.adapter.dto.post.CategoryColorResponseDTO;
 import com.spoony.spoony_server.adapter.out.persistence.post.db.PhotoEntity;
 import com.spoony.spoony_server.adapter.out.persistence.post.db.PostCategoryEntity;
 import com.spoony.spoony_server.adapter.out.persistence.post.db.PostEntity;
 import com.spoony.spoony_server.adapter.out.persistence.post.db.PhotoRepository;
-import com.spoony.spoony_server.adapter.out.persistence.post.db.PostCategoryRepository;
-import com.spoony.spoony_server.adapter.out.persistence.post.db.PostRepository;
 import com.spoony.spoony_server.adapter.out.persistence.user.db.UserEntity;
-import com.spoony.spoony_server.adapter.out.persistence.user.db.UserRepository;
 import com.spoony.spoony_server.adapter.dto.zzim.ZzimCardListResponseDTO;
 import com.spoony.spoony_server.adapter.dto.zzim.ZzimCardResponseDTO;
 import com.spoony.spoony_server.adapter.dto.zzim.ZzimFocusListResponseDTO;
 import com.spoony.spoony_server.adapter.dto.zzim.ZzimFocusResponseDTO;
 import com.spoony.spoony_server.adapter.out.persistence.zzim.db.ZzimPostEntity;
-import com.spoony.spoony_server.adapter.out.persistence.zzim.db.ZzimPostRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -43,74 +49,67 @@ public class ZzimPostService implements
         ZzimGetUseCase,
         ZzimDeleteUseCase {
 
-    private final ZzimPostRepository zzimPostRepository;
-    private final PostCategoryRepository postCategoryRepository;
-    private final PostRepository postRepository;
-    private final UserRepository userRepository;
+    private final ZzimPostPort zzimPostPort;
+    private final PostCategoryPort postCategoryPort;
+    private final PostPort postPort;
+    private final UserPort userPort;
     private final PhotoRepository photoRepository;
-    private final PlaceRepository placeRepository;
-    private final LocationRepository locationRepository;
+    private final PlacePort placePort;
+    private final LocationPort locationPort;
+    private final CategoryPort categoryPort;
 
     public void addZzimPost(ZzimAddCommand command) {
-
         Long postId = command.getPostId();
         Long userId = command.getUserId();
 
-        PostEntity postEntity = postRepository.findById(postId).orElseThrow(() -> new BusinessException(PostErrorMessage.POST_NOT_FOUND));
-        UserEntity userEntity = userRepository.findById(userId).orElseThrow(() -> new BusinessException(UserErrorMessage.USER_NOT_FOUND));
-
-        ZzimPostEntity zzimPostEntity = ZzimPostEntity.builder().post(postEntity).user(userEntity).build();
-
-        zzimPostRepository.save(zzimPostEntity);
+        Post post = postPort.findPostById(postId);
+        User user = userPort.findUserById(userId);
+        zzimPostPort.saveZzimPost(user,post);
     }
+
 
     //사용자 지도 리스트 조회
     public ZzimCardListResponseDTO getZzimCardList(ZzimGetCardCommand command) {
-        List<ZzimPostEntity> zzimPostEntityList = zzimPostRepository.findByUser(userRepository.findById(command.getUserId())
-                .orElseThrow(() -> new BusinessException(UserErrorMessage.USER_NOT_FOUND))
-        );
+        List<ZzimPost> zzimPostList = zzimPostPort.findUserByUserId(command.getUserId());
 
-        Map<Long, ZzimPostEntity> uniquePlacePostMap = new LinkedHashMap<>();
+        Map<Long, ZzimPost> uniquePlacePostMap = new LinkedHashMap<>();
 
-        for (ZzimPostEntity zzimPostEntity : zzimPostEntityList) {
-            PlaceEntity placeEntity = zzimPostEntity.getPost().getPlace();
-            if (placeEntity == null) {
+        for (ZzimPost zzimPost : zzimPostList) {
+            Place place = zzimPost.getPost().getPlace();
+            if (place == null) {
                 throw new BusinessException(PlaceErrorMessage.PLACE_NOT_FOUND);
             }
 
-            Long placeId = placeEntity.getPlaceId();
+            Long placeId = place.getPlaceId();
             if (!uniquePlacePostMap.containsKey(placeId)) {
-                uniquePlacePostMap.put(placeId, zzimPostEntity);
+                uniquePlacePostMap.put(placeId, zzimPost);
             }
         }
 
+
         List<ZzimCardResponseDTO> zzimCardResponses = uniquePlacePostMap.values().stream()
-                .map(zzimPostEntity -> {
-                    PostEntity postEntity = zzimPostEntity.getPost();
-                    PlaceEntity placeEntity = postEntity.getPlace();
+                .map(zzimPost -> {
+                    Post post = zzimPost.getPost();
+                    Place place = post.getPlace();
+                    Photo photo = zzimPostPort.findFistPhotoById(post.getPostId());
+                    PostCategory postCategory = postCategoryPort.findPostCategoryByPostId(post.getPostId());
 
-                    PhotoEntity photoEntity = photoRepository.findFirstByPost(postEntity)
-                            .orElseThrow(() -> new BusinessException(PostErrorMessage.PHOTO_NOT_FOUND));
+                    CategoryColorResponseDTO categoryColorResponse = new CategoryColorResponseDTO(
+                            postCategory.getCategory().getCategoryId(),
+                            postCategory.getCategory().getCategoryName(),
+                            postCategory.getCategory().getIconUrlColor(),
+                            postCategory.getCategory().getTextColor(),
+                            postCategory.getCategory().getBackgroundColor());
 
-                    CategoryColorResponseDTO categoryColorResponse = postCategoryRepository.findByPost(postEntity)
-                            .map(PostCategoryEntity::getCategory)
-                            .map(categoryEntity -> new CategoryColorResponseDTO(
-                                    categoryEntity.getCategoryId(),
-                                    categoryEntity.getCategoryName(),
-                                    categoryEntity.getIconUrlColor(),
-                                    categoryEntity.getTextColor(),
-                                    categoryEntity.getBackgroundColor()
-                            ))
-                            .orElseThrow(() -> new BusinessException(PostErrorMessage.CATEGORY_NOT_FOUND));
 
                     return new ZzimCardResponseDTO(
-                            placeEntity.getPlaceId(),  // placeId 추가
-                            placeEntity.getPlaceName(),
-                            placeEntity.getPlaceAddress(),
-                            postEntity.getTitle(),
-                            photoEntity.getPhotoUrl(),
-                            placeEntity.getLatitude(),
-                            placeEntity.getLongitude(),
+                            place.getPlaceId(),  // placeId 추가
+                            place.getPlaceName(),
+                            place.getPlaceAddress(),
+                            post.getTitle(),
+                            photo.getPhotoUrl(),
+                            place.getLatitude(),
+                            place.getLongitude(),
                             categoryColorResponse
                     );
                 })
@@ -120,48 +119,48 @@ public class ZzimPostService implements
     }
 
     public ZzimFocusListResponseDTO getZzimFocusList(ZzimGetFocusCommand command) {
-        UserEntity userEntity = userRepository.findById(command.getUserId())
-                .orElseThrow(() -> new BusinessException(UserErrorMessage.USER_NOT_FOUND));
+        User user = userPort.findUserById(command.getUserId());
+        List<ZzimPost> zzimPostList = zzimPostPort.findUserByUserId(user.getUserId());
 
-        List<ZzimPostEntity> zzimPostEntityList = zzimPostRepository.findByUser(userEntity);
-
-        List<ZzimFocusResponseDTO> zzimFocusResponseList = zzimPostEntityList.stream()
-                .filter(zzimPostEntity -> {
-                    PostEntity postEntity = zzimPostEntity.getPost();
-                    PlaceEntity postPlaceEntity = postEntity.getPlace();
-                    return postPlaceEntity != null && postPlaceEntity.getPlaceId().equals(command.getPlaceId());
+        List<ZzimFocusResponseDTO> zzimFocusResponseList = zzimPostList.stream()
+                .filter(zzimPost -> {
+                    Post post = zzimPost.getPost();
+                    Place postPlace = post.getPlace();
+                    return postPlace != null && postPlace.getPlaceId().equals(command.getPlaceId());
                 })
-                .map(zzimPostEntity -> {
-                    PostEntity postEntity = zzimPostEntity.getPost();
-                    PlaceEntity postPlaceEntity = postEntity.getPlace();
+                .map(zzimPost -> {
+                    Post post = zzimPost.getPost();
+                    Place postPlace = post.getPlace();
 
-                    CategoryColorResponseDTO categoryColorResponse = postCategoryRepository.findByPost(postEntity)
-                            .map(PostCategoryEntity::getCategory)
-                            .map(categoryEntity -> new CategoryColorResponseDTO(
-                                    categoryEntity.getCategoryId(),
-                                    categoryEntity.getCategoryName(),
-                                    categoryEntity.getIconUrlColor(),
-                                    categoryEntity.getTextColor(),
-                                    categoryEntity.getBackgroundColor()
-                            ))
-                            .orElseThrow(() -> new BusinessException(PostErrorMessage.CATEGORY_NOT_FOUND));
+                    PostCategory postCategory = postCategoryPort.findPostCategoryByPostId(post.getPostId());
 
-                    Long zzimCount = zzimPostRepository.countByPost(postEntity);
+                    CategoryColorResponseDTO categoryColorResponse = new CategoryColorResponseDTO(
+                            postCategory.getCategory().getCategoryId(),
+                            postCategory.getCategory().getCategoryName(),
+                            postCategory.getCategory().getIconUrlColor(),
+                            postCategory.getCategory().getTextColor(),
+                            postCategory.getCategory().getBackgroundColor());
 
-                    List<String> photoUrlList = photoRepository.findByPost(postEntity)
-                            .orElseThrow(() -> new BusinessException(PostErrorMessage.PHOTO_NOT_FOUND))
-                            .stream()
-                            .map(PhotoEntity::getPhotoUrl)
-                            .collect(Collectors.toList());
+                    Long zzimCount = zzimPostPort.countZzimByPostId(post.getPostId());
+
+                    //Photo photo = zzimPostPort.findPhotoById(post.getPostId());
+
+
+                    List<Photo> photoList = zzimPostPort.findPhotoListById(post.getPostId());
+                    List<String> photoUrlList = photoList.stream()
+                            .map(Photo::getPhotoUrl)
+                            .toList();
+
+
 
                     return new ZzimFocusResponseDTO(
-                            postPlaceEntity.getPlaceId(),
-                            postPlaceEntity.getPlaceName(),
+                            postPlace.getPlaceId(),
+                            postPlace.getPlaceName(),
                             categoryColorResponse,
-                            postEntity.getUser().getUserName(),
-                            postEntity.getUser().getRegion().getRegionName(),
-                            postEntity.getPostId(),
-                            postEntity.getTitle(),
+                            post.getUser().getUserName(),
+                            post.getUser().getRegion().getRegionName(),
+                            post.getPostId(),
+                            post.getTitle(),
                             zzimCount,
                             photoUrlList
                     );
@@ -173,78 +172,72 @@ public class ZzimPostService implements
 
     @Transactional
     public void deleteZzim(ZzimDeleteCommand command) {
-        UserEntity userEntity = userRepository.findById(command.getUserId())
-                .orElseThrow(() -> new BusinessException(UserErrorMessage.USER_NOT_FOUND));
-        PostEntity postEntity = postRepository.findById(command.getPostId())
-                .orElseThrow(() -> new BusinessException(PostErrorMessage.POST_NOT_FOUND));
+        User user = userPort.findUserById(command.getUserId());
+        Post post = postPort.findPostById(command.getPostId());
 
-        zzimPostRepository.deleteByUserAndPost(userEntity, postEntity);
+        zzimPostPort.deleteByUserAndPost(user,post);
     }
 
     public ZzimCardListResponseDTO getZzimByLocation(ZzimGetLocationCardCommand command) {
-        LocationEntity locationEntity = locationRepository.findById(command.getLocationId())
-                .orElseThrow(() -> new BusinessException(PostErrorMessage.LOCATION_NOT_FOUND));
 
-        if (locationEntity.getLocationTypeEntity().getLocationTypeId() == 1) {
-            return getZzimByAddress(command.getUserId(), locationEntity.getLocationName());
-        } else if (locationEntity.getLocationTypeEntity().getLocationTypeId() == 2) {
-            return getZzimByAreaDong(command.getUserId(), locationEntity.getLongitude(), locationEntity.getLatitude());
+        Location location = locationPort.findLocationById(command.getLocationId());
+
+        if (location.getLocationType().getLocationTypeId() == 1) {
+            return getZzimByAddress(command.getUserId(), location.getLocationName());
+        } else if (location.getLocationType().getLocationTypeId() == 2) {
+            return getZzimByAreaDong(command.getUserId(), location.getLongitude(), location.getLatitude());
         } else{
-            return getZzimByAreaStation(command.getUserId(), locationEntity.getLongitude(), locationEntity.getLatitude());
+            return getZzimByAreaStation(command.getUserId(), location.getLongitude(), location.getLatitude());
         }
     }
 
     private ZzimCardListResponseDTO getZzimByAddress(Long userId, String locationName) {
-        List<ZzimPostEntity> zzimPostEntityList = zzimPostRepository.findByUser((userRepository.findById(userId)
-                .orElseThrow(() -> new BusinessException(UserErrorMessage.USER_NOT_FOUND))
-        ));
 
-        Map<Long, ZzimPostEntity> uniquePlacePostMap = new LinkedHashMap<>();
+        List<ZzimPost> zzimPostList = zzimPostPort.findUserByUserId(userId);
+        Map<Long, ZzimPost> uniquePlacePostMap = new LinkedHashMap<>();
 
-        for (ZzimPostEntity zzimPostEntity : zzimPostEntityList) {
-            PlaceEntity placeEntity = zzimPostEntity.getPost().getPlace();
-            if (placeEntity == null) {
+        for (ZzimPost zzimPost : zzimPostList) {
+            Place place = zzimPost.getPost().getPlace();
+            if (place == null) {
                 throw new BusinessException(PlaceErrorMessage.PLACE_NOT_FOUND);
             }
 
-            Long placeId = placeEntity.getPlaceId();
+            Long placeId = place.getPlaceId();
             if (!uniquePlacePostMap.containsKey(placeId)) {
-                uniquePlacePostMap.put(placeId, zzimPostEntity);
+                uniquePlacePostMap.put(placeId, zzimPost);
             }
         }
 
         // placeAddress에 locationName 문자열이 포함된 데이터만 필터링
         List<ZzimCardResponseDTO> zzimCardResponses = uniquePlacePostMap.values().stream()
-                .filter(zzimPostEntity -> {
-                    PlaceEntity placeEntity = zzimPostEntity.getPost().getPlace();
-                    return placeEntity.getPlaceAddress() != null && placeEntity.getPlaceAddress().contains(locationName);
+                .filter(zzimPost-> {
+                    Place place= zzimPost.getPost().getPlace();
+                    return place.getPlaceAddress() != null && place.getPlaceAddress().contains(locationName);
                 })
-                .map(zzimPostEntity -> {
-                    PostEntity postEntity = zzimPostEntity.getPost();
-                    PlaceEntity placeEntity = postEntity.getPlace();
+                .map(zzimPost -> {
+                    Post post = zzimPost.getPost();
+                    Place place = post.getPlace();
+                    Photo photo = zzimPostPort.findFistPhotoById(post.getPostId());
 
-                    PhotoEntity photoEntity = photoRepository.findFirstByPost(postEntity)
-                            .orElseThrow(() -> new BusinessException(PostErrorMessage.PHOTO_NOT_FOUND));
 
-                    CategoryColorResponseDTO categoryColorResponse = postCategoryRepository.findByPost(postEntity)
-                            .map(PostCategoryEntity::getCategory)
-                            .map(categoryEntity -> new CategoryColorResponseDTO(
-                                    categoryEntity.getCategoryId(),
-                                    categoryEntity.getCategoryName(),
-                                    categoryEntity.getIconUrlColor(),
-                                    categoryEntity.getTextColor(),
-                                    categoryEntity.getBackgroundColor()
-                            ))
-                            .orElseThrow(() -> new BusinessException(PostErrorMessage.CATEGORY_NOT_FOUND));
+
+                    PostCategory postCategory = postCategoryPort.findPostCategoryByPostId(post.getPostId());
+
+                    CategoryColorResponseDTO categoryColorResponse = new CategoryColorResponseDTO(
+                            postCategory.getCategory().getCategoryId(),
+                            postCategory.getCategory().getCategoryName(),
+                            postCategory.getCategory().getIconUrlColor(),
+                            postCategory.getCategory().getTextColor(),
+                            postCategory.getCategory().getBackgroundColor());
 
                     return new ZzimCardResponseDTO(
-                            placeEntity.getPlaceId(),  // placeId 추가
-                            placeEntity.getPlaceName(),
-                            placeEntity.getPlaceAddress(),
-                            postEntity.getTitle(),
-                            photoEntity.getPhotoUrl(),
-                            placeEntity.getLatitude(),
-                            placeEntity.getLongitude(),
+                            place.getPlaceId(),  // placeId 추가
+                            place.getPlaceName(),
+                            place.getPlaceAddress(),
+                            post.getTitle(),
+                            photo.getPhotoUrl(),
+                            place.getLatitude(),
+                            place.getLongitude(),
                             categoryColorResponse
                     );
                 })
@@ -254,59 +247,54 @@ public class ZzimPostService implements
     }
 
     private ZzimCardListResponseDTO getZzimByAreaDong(Long userId, Double longitude, Double latitude) {
-        List<ZzimPostEntity> zzimPostEntityList = zzimPostRepository.findByUser(userRepository.findById(userId)
-                .orElseThrow(() -> new BusinessException(UserErrorMessage.USER_NOT_FOUND))
-        );
+        List<ZzimPost> zzimPostList = zzimPostPort.findUserByUserId(userId);
 
-        Map<Long, ZzimPostEntity> uniquePlacePostMap = new LinkedHashMap<>();
 
-        for (ZzimPostEntity zzimPostEntity : zzimPostEntityList) {
-            PlaceEntity placeEntity = zzimPostEntity.getPost().getPlace();
-            if (placeEntity == null) {
+        Map<Long, ZzimPost> uniquePlacePostMap = new LinkedHashMap<>();
+
+        for (ZzimPost zzimPost : zzimPostList) {
+            Place place = zzimPost.getPost().getPlace();
+            if (place == null) {
                 throw new BusinessException(PlaceErrorMessage.PLACE_NOT_FOUND);
             }
 
-            Long placeId = placeEntity.getPlaceId();
+            Long placeId = place.getPlaceId();
             if (!uniquePlacePostMap.containsKey(placeId)) {
-                uniquePlacePostMap.put(placeId, zzimPostEntity);
+                uniquePlacePostMap.put(placeId, zzimPost);
             }
         }
 
         // 주어진 위도(latitude)와 경도(longitude) 기준으로 2km 이내 장소만 필터링
         List<ZzimCardResponseDTO> zzimCardResponses = uniquePlacePostMap.values().stream()
-                .filter(zzimPostEntity -> {
-                    PlaceEntity placeEntity = zzimPostEntity.getPost().getPlace();
-                    if (placeEntity.getLatitude() == null || placeEntity.getLongitude() == null) {
+                .filter(zzimPost -> {
+                    Place place = zzimPost.getPost().getPlace();
+                    if (place.getLatitude() == null || place.getLongitude() == null) {
                         return false;
                     }
-                    return calculateDistance(latitude, longitude, placeEntity.getLatitude(), placeEntity.getLongitude()) <= 2.0;
+                    return calculateDistance(latitude, longitude, place.getLatitude(), place.getLongitude()) <= 2.0;
                 })
-                .map(zzimPostEntity -> {
-                    PostEntity postEntity = zzimPostEntity.getPost();
-                    PlaceEntity placeEntity = postEntity.getPlace();
+                .map(zzimPost -> {
+                    Post post = zzimPost.getPost();
+                    Place place = post.getPlace();
+                    Photo photo = zzimPostPort.findFistPhotoById(post.getPostId());
 
-                    PhotoEntity photoEntity = photoRepository.findFirstByPost(postEntity)
-                            .orElseThrow(() -> new BusinessException(PostErrorMessage.PHOTO_NOT_FOUND));
+                    PostCategory postCategory = postCategoryPort.findPostCategoryByPostId(post.getPostId());
 
-                    CategoryColorResponseDTO categoryColorResponse = postCategoryRepository.findByPost(postEntity)
-                            .map(PostCategoryEntity::getCategory)
-                            .map(categoryEntity -> new CategoryColorResponseDTO(
-                                    categoryEntity.getCategoryId(),
-                                    categoryEntity.getCategoryName(),
-                                    categoryEntity.getIconUrlColor(),
-                                    categoryEntity.getTextColor(),
-                                    categoryEntity.getBackgroundColor()
-                            ))
-                            .orElseThrow(() -> new BusinessException(PostErrorMessage.CATEGORY_NOT_FOUND));
+                    CategoryColorResponseDTO categoryColorResponse = new CategoryColorResponseDTO(
+                            postCategory.getCategory().getCategoryId(),
+                            postCategory.getCategory().getCategoryName(),
+                            postCategory.getCategory().getIconUrlColor(),
+                            postCategory.getCategory().getTextColor(),
+                            postCategory.getCategory().getBackgroundColor());
 
                     return new ZzimCardResponseDTO(
-                            placeEntity.getPlaceId(),  // placeId 추가
-                            placeEntity.getPlaceName(),
-                            placeEntity.getPlaceAddress(),
-                            postEntity.getTitle(),
-                            photoEntity.getPhotoUrl(),
-                            placeEntity.getLatitude(),
-                            placeEntity.getLongitude(),
+                            place.getPlaceId(),  // placeId 추가
+                            place.getPlaceName(),
+                            place.getPlaceAddress(),
+                            post.getTitle(),
+                            photo.getPhotoUrl(),
+                            place.getLatitude(),
+                            place.getLongitude(),
                             categoryColorResponse
                     );
                 })
@@ -316,59 +304,55 @@ public class ZzimPostService implements
     }
 
     private ZzimCardListResponseDTO getZzimByAreaStation(Long userId, Double longitude, Double latitude) {
-        List<ZzimPostEntity> zzimPostEntityList = zzimPostRepository.findByUser(userRepository.findById(userId)
-                .orElseThrow(() -> new BusinessException(UserErrorMessage.USER_NOT_FOUND))
-        );
+        List<ZzimPost> zzimPostList = zzimPostPort.findUserByUserId(userId);
 
-        Map<Long, ZzimPostEntity> uniquePlacePostMap = new LinkedHashMap<>();
 
-        for (ZzimPostEntity zzimPostEntity : zzimPostEntityList) {
-            PlaceEntity placeEntity = zzimPostEntity.getPost().getPlace();
-            if (placeEntity == null) {
+        Map<Long, ZzimPost> uniquePlacePostMap = new LinkedHashMap<>();
+
+        for (ZzimPost zzimPost : zzimPostList) {
+            Place place = zzimPost.getPost().getPlace();
+            if (place == null) {
                 throw new BusinessException(PlaceErrorMessage.PLACE_NOT_FOUND);
             }
 
-            Long placeId = placeEntity.getPlaceId();
+            Long placeId = place.getPlaceId();
             if (!uniquePlacePostMap.containsKey(placeId)) {
-                uniquePlacePostMap.put(placeId, zzimPostEntity);
+                uniquePlacePostMap.put(placeId, zzimPost);
             }
         }
 
         // 주어진 위도(latitude)와 경도(longitude) 기준으로 2km 이내 장소만 필터링
         List<ZzimCardResponseDTO> zzimCardResponses = uniquePlacePostMap.values().stream()
-                .filter(zzimPostEntity -> {
-                    PlaceEntity placeEntity = zzimPostEntity.getPost().getPlace();
-                    if (placeEntity.getLatitude() == null || placeEntity.getLongitude() == null) {
+                .filter(zzimPost -> {
+                    Place place = zzimPost.getPost().getPlace();
+                    if (place.getLatitude() == null || place.getLongitude() == null) {
                         return false;
                     }
-                    return calculateDistance(latitude, longitude, placeEntity.getLatitude(), placeEntity.getLongitude()) <= 1.0;
+                    return calculateDistance(latitude, longitude, place.getLatitude(), place.getLongitude()) <= 1.0;
                 })
-                .map(zzimPostEntity -> {
-                    PostEntity postEntity = zzimPostEntity.getPost();
-                    PlaceEntity placeEntity = postEntity.getPlace();
+                .map(zzimPost -> {
+                    Post post = zzimPost.getPost();
+                    Place place = post.getPlace();
 
-                    PhotoEntity photoEntity = photoRepository.findFirstByPost(postEntity)
-                            .orElseThrow(() -> new BusinessException(PostErrorMessage.PHOTO_NOT_FOUND));
+                    Photo photo = zzimPostPort.findFistPhotoById(post.getPostId());
 
-                    CategoryColorResponseDTO categoryColorResponse = postCategoryRepository.findByPost(postEntity)
-                            .map(PostCategoryEntity::getCategory)
-                            .map(categoryEntity -> new CategoryColorResponseDTO(
-                                    categoryEntity.getCategoryId(),
-                                    categoryEntity.getCategoryName(),
-                                    categoryEntity.getIconUrlColor(),
-                                    categoryEntity.getTextColor(),
-                                    categoryEntity.getBackgroundColor()
-                            ))
-                            .orElseThrow(() -> new BusinessException(PostErrorMessage.CATEGORY_NOT_FOUND));
+                    PostCategory postCategory = postCategoryPort.findPostCategoryByPostId(post.getPostId());
+
+                    CategoryColorResponseDTO categoryColorResponse = new CategoryColorResponseDTO(
+                            postCategory.getCategory().getCategoryId(),
+                            postCategory.getCategory().getCategoryName(),
+                            postCategory.getCategory().getIconUrlColor(),
+                            postCategory.getCategory().getTextColor(),
+                            postCategory.getCategory().getBackgroundColor());
 
                     return new ZzimCardResponseDTO(
-                            placeEntity.getPlaceId(),  // placeId 추가
-                            placeEntity.getPlaceName(),
-                            placeEntity.getPlaceAddress(),
-                            postEntity.getTitle(),
-                            photoEntity.getPhotoUrl(),
-                            placeEntity.getLatitude(),
-                            placeEntity.getLongitude(),
+                            place.getPlaceId(),  // placeId 추가
+                            place.getPlaceName(),
+                            place.getPlaceAddress(),
+                            post.getTitle(),
+                            photo.getPhotoUrl(),
+                            place.getLatitude(),
+                            place.getLongitude(),
                             categoryColorResponse
                     );
                 })
